# yarrosco

./: .gitignore  AUTHORS  Cargo.toml  NOTES.md  README.md  README_config.md  README_contents.md  README_setup.md  whatsongisplaying.sh  yarrosco.template.toml  yarrosco.toml.template  yarrsecrets.toml.template
data/: README_customize.md  README_setup.md  config.js  config.ts  config.ts.bad  script.js  script.ts  styles.css  styles_base.css  styles_yarr1.css  tsconfig.json  yarrosco_chat.html
data/logos-third-party/: README_licenses.md
yarrcfg/: Cargo.toml
yarrcfg/src/: bin.rs  lib.rs
yarrdata/: Cargo.toml
yarrdata/src/: bin.rs  db.rs  lib.rs
yarrirc/: Cargo.toml
yarrirc/src/: main.rs
yarrirclib/: Cargo.toml
yarrlib/: Cargo.toml
yarrmatrix/: Cargo.toml
yarrmatrix/src/: bin.rs  lib.rs
yarrosco/: Cargo.toml
yarrosco/src/: main.rs
yarrpass/: Cargo.toml
yarrpass/src/: bin.rs  lib.rs  main.rs
yarrpasslib/: Cargo.toml
yarrpasslib/src/: lib.rs  tests.rs
yarrpng/: Cargo.toml  README.md
yarrpng/src/: main.rs
yarrsvg/: Cargo.toml
yarrsvg/src/: fontsz.rs  main.rs
yarrtwitch/: Cargo.toml
yarrtwitch/src/: bin.rs  lib.rs
