[package]
name = "yarrcfg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yarrpass = { path = "../yarrpass" }
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
log = "0.4"
thiserror = "1.0"
