[package]
name = "yarrirc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yarrirc"
path = "src/lib.rs"

[[bin]]
name = "yarrirc"
path = "src/bin.rs"


[dependencies]
yarrcfg = { path = "../yarrcfg" }
irc = "0.15"
tokio = { version = "1.17", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"