[package]
name = "yarrmatrix"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yarrmatrix"
path = "src/lib.rs"

[[bin]]
name = "yarrmatrix"
path = "src/bin.rs"

[dependencies]
yarrcfg = { path = "../yarrcfg" }
# matrix-sdk = { version = "0.4", features = ["anyhow"] }
matrix-sdk = { version = "0.4" }
tokio = { version = "1.17", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
# Ruma identifiers MUST match the one used in matrix-sdk
ruma-identifiers = { version = "0.20", features = ["rand"] }