[package]
name = "yarrosco"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yarrcfg = { path = "../yarrcfg" }
yarrtwitch = { path = "../yarrtwitch" }
yarrmatrix = { path = "../yarrmatrix" }
yarrdata = { path = "../yarrdata" }
tokio = { version = "1.17", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
