[package]
name = "yarrsvg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yarrcfg = { path = "../yarrcfg" }
yarrdata = { path = "../yarrdata" }
svg = "0.10"
env_logger = "0.9"
log = "0.4"
anyhow = "1.0"
tokio = { version = "1.17", features = ["full"] }
futures = "0.3"