[package]
name = "yarrtwitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yarrtwitch"
path = "src/lib.rs"

[[bin]]
name = "yarrtwitch"
path = "src/bin.rs"


[dependencies]
yarrcfg = { path = "../yarrcfg" }
irc = "0.15"
tokio = { version = "1.17", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
# TODO: See Rust Twitch crates! https://crates.io/keywords/twitch