[package]
name = "yarrtwitch"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "yarrtwitch"
path = "src/lib.rs"

[[bin]]
name = "yarrtwitch"
path = "src/bin.rs"


[dependencies]
yarrcfg = { path = "../yarrcfg" }
yarrdata = { path = "../yarrdata" }
irc = "0.15"
tokio = { version = "1.17", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
thiserror = "1.0.30"
bus_queue = "0.5.3"
twitch_oauth2 = "0.6.1"
twitch_api2 = { version = "0.6.1", features = ["twitch_oauth2","client", "helix", "reqwest", "trace_unknown_fields"]}
reqwest = "0.11.10"